--- a/style.css
+++ b/style.css
@@ -4,16 +4,20 @@
     height: 100px;
 }
 .str1{
+    height: 100px;
     width: 100px;
     margin-left: 10px;
+   text-align: center;
    
 
 }
 
 .str2
 {
-    width: 100px;
-    margin-left: 40px;
+    height: 100px;
+    width: 50px;
+    margin-left: 100px;
+    margin-top: 0px;
     
 }
 .menu2{
